Se crea la ventana de calculo panoramico y se crea otra ventana para las opciones Se agregan los datos necesarios para poder realizar el calculo panoramico

--- a/src/Vista/CalculosRegistrados.form
+++ b/src/Vista/CalculosRegistrados.form
@@ -47,11 +47,13 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="363" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnActualizar" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btnCopiar" alignment="1" max="32767" attributes="0"/>
                   <Component id="btnVer" alignment="0" max="32767" attributes="0"/>
-                  <Component id="btnOtroCalculo" alignment="3" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btnActualizar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnOtroCalculo" alignment="3" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
