--- a/src/Vista/CalculoPanoramico.form
+++ b/src/Vista/CalculoPanoramico.form
@@ -239,6 +239,7 @@
                 <StringItem index="1" value="Barrera secundaria"/>
               </StringArray>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -280,9 +281,9 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="100"/>
-                <StringItem index="1" value="200"/>
-                <StringItem index="2" value="300"/>
+                <StringItem index="0" value="25"/>
+                <StringItem index="1" value="50"/>
+                <StringItem index="2" value="75"/>
               </StringArray>
             </Property>
           </Properties>
